--- a/Queue2024/Queue2024.vcxproj.filters
+++ b/Queue2024/Queue2024.vcxproj.filters
@@ -27,4 +27,7 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="persons.txt" />
+  </ItemGroup>
 </Project>
